fix: menu and window missing borders in light & oled

--- a/fm/bleh.user.css
+++ b/fm/bleh.user.css
@@ -1523,7 +1523,7 @@ body[class*="namespace--user_library_"] .col-sidebar, .library-header,
 
     [data-bleh--theme="light"] &,
     [data-bleh--theme="oled"] & {
-        box-shadow: 0 0 0 1px var(--card-border-base) inset;
+        box-shadow: 0 0 0 1px var(--card-border-base) inset, var(--card-shadow);
     }
 }
 .content-top-header,
@@ -7394,6 +7394,11 @@ input:is([name="track_name"], [name="artist_name"], [name="album_name"], [name="
         background-repeat: repeat-x !important;
         background-position: unset !important;
     }
+
+    [data-bleh--theme="light"] &,
+    [data-bleh--theme="oled"] & {
+        box-shadow: 0 0 0 1px var(--card-border-base) inset, var(--menu-shadow) !important;
+    }
 }
 
 .popup_background {
@@ -8768,6 +8773,11 @@ text[style^="color: rgb(255, 172, 172)"] {
         text-align: left;
 
         font-size: var(--font-size);
+
+        [data-bleh--theme="light"] &,
+        [data-bleh--theme="oled"] & {
+            box-shadow: 0 0 0 1px var(--card-border-base) inset, var(--menu-shadow) !important;
+        }
 
         [data-bleh--seasonal_overlays="true"][data-bleh--season="fall"] &,
         [data-bleh--seasonal_overlays="true"][data-bleh--season="christmas"] &,
